UI for login&registration routing

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+    <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet"> <!-- fontawesome css-->
 
     <title>React App</title>
   </head>
@@ -25,3 +27,4 @@
 <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
 <script src="https://unpkg.com/react/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> <!-- fontawesome js-->
