--- a/react/public/index.html
+++ b/react/public/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet"> <!-- fontawesome css-->
 
-    <title>React App</title>
+    <title>Budget Calculator</title>
   </head>
     <div id="root" class='container-fluid'></div>
     <noscript>
-        You need to enable JavaScript to run this app.
+        You need to enable JavaScript to run this app. 
+        if that didn't work try using another browser.
       </noscript>  
   </body>
 </html>
